--- a/index.html
+++ b/index.html
@@ -3,11 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>What did you have?</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+    <section class="header text-uppercase"><h1>What did you have today?</h1></section>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.nutritionix.com/business/api">API</a></li>
+        </ul>
+    </nav>
+    <section class="app">
+        <section class="memo">
+            <section class="memo-1"><ul class="memo-item"></ul></section>
+            <section class="memo-2">
+                <label for="memo-input">Add foods you had today</label>
+                <input class="memo-input" type="text" name="memo-input">
+                <button type="button" class="add-btn btn btn-primary">add</button>
+                <button type="button" class="remove-btn btn btn-primary">remove</button>
+                <button type="clear" class="clear-btn btn btn-primary">clear</button>
+            </section>
+        </section>
+        <section class="search">
+            <section class="search-1 output"><p>Test</p></section>
+            <section class="search-2">
+                <label for="search-box">Find calories of what you had</label>
+                <input class="search-box" type="text">
+                <button type="button" class="search-button btn btn-primary">search</button>
+            </section>
+        </section>
+    </section>
+    <section class="footer text-muted py-5">Hi, I am a footer</section>
+    </div>
     <script src="./main.js"></script>
+    <script src="./config.js"></script>
 </body>
 </html>
