updated the basic layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <section class="app">
         <section class="memo">
-            <section class="memo-1"><ul class="memo-item"></ul></section>
+            <section class="memo-1 display"><ul class="memo-item"></ul></section>
             <section class="memo-2">
                 <label for="memo-input">Add foods you had today</label>
                 <input class="memo-input" type="text" name="memo-input">
@@ -28,7 +28,7 @@
             </section>
         </section>
         <section class="search">
-            <section class="search-1 output"><p>Test</p></section>
+            <section class="search-1 output display"><p></p></section>
             <section class="search-2">
                 <label for="search-box">Find calories of what you had</label>
                 <input class="search-box" type="text">
