changed button and input box size

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <label for="memo-input">
                         <h5>Add foods you had today</h5>
                     </label>
-                    <input class="memo-input" type="text" name="memo-input">
+                    <input class="memo-input input" type="text" name="memo-input">
                     <button type="button" class="add-btn btn btn-primary">add</button>
                     <button type="button" class="remove-btn btn btn-primary">remove</button>
                     <button type="clear" class="clear-btn btn btn-primary">clear</button>
@@ -72,7 +72,7 @@
                     <label for="search-box">
                         <h5>Find calories of foods you had</h5>
                     </label>
-                    <input class="search-box" type="text">
+                    <input class="search-box input" type="text">
                     <button type="button" class="search-button btn btn-primary">search</button>
             </section>
 
