--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </section>
         <nav class="navbar navbar-expand-lg navbar-light">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/tydo83/final-project-term1" target="_blank">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://www.nutritionix.com/business/api"
                     target="_blank">API</a></li>
             </ul>
