--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
             </section>
             
             <section class="memo-1">
-                Mindfulness can easily be translated to “awareness.” In this case, 
-                it could be the awareness of what we are eating, how we are eating, 
-                why we are eating, and when we are eating?1 Many of us enjoy snacking 
-                or grabbing “seconds” at dinner time. There are also those of us that eat 
-                when we are sad or depressed.1
-
+                Many people begin the new year with a resolve to improve their health. 
+                This improvement often starts with changing what they eat.
+                A food diary can be a useful tool in this process. It can help you understand 
+                your eating habits and patterns, and help you identify the foods — 
+                good and not-so-good — you eat on a regular basis.
             </section>
 
 
